--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,38 @@
 .student p {
   margin: 0;
 }
+
+.box {
+  background-color: hsl(207, 55%, 49%);
+  height: 250px;
+  border: 1px solid hsl(0, 0%, 80%);
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+  padding: 20px;
+  margin: 10px;
+}
+
+.box-size {
+  height: 520px;
+}
+
+.box h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 5em;
+  color: hsla(0, 0%, 100%, 0.912);
+}
+
+.navBar {
+  position: sticky;
+  background-color: hsl(0, 0%, 20%);
+  font-family: Arial, Helvetica, sans-serif;
+  color: hsla(0, 0%, 100%, 0.912);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link {
+  font-family: Arial, Helvetica, sans-serif;
+  color: hsla(0, 0%, 100%, 0.912);
+}
