--- a/src/carousel.css
+++ b/src/carousel.css
@@ -5,6 +5,7 @@
     align-items: center;
     width: 600px;
     height: 400px;
+    overflow: hidden;
 }
 
 .slides {
@@ -12,7 +13,7 @@
     box-shadow: 0px 0px 7px #666;
     width: 100%;
     height: 100%;
-    transition: transform 1s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 
 .slides-hidden {
@@ -71,4 +72,8 @@
 
 .indicator-inactive {
     background-color: gray;
+}
+
+.img {
+    display: flex;
 }
